# Az_Prod

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  pyproyect.toml  render-build.sh  render.build.sh  render.yaml  requirements.txt
accounts/: models.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
pedidos/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
pedidos/migrations/: 0001_initial.py
pedidos/templates/: base.html
pedidos/templates/pedidos/: agregar_seguimiento.html  crear_pedidos.html  dashboard.html  detalle_pedidos.html  lista_pedidos.html  procesar_pedidos.html  vista_administrador.html  vista_designers.html  vista_embolsador.html  vista_enteladores.html  vista_impresor.html
pedidos/templates/registration/: login.html
static/css/: styles.css
