[tool.poetry]
name = "az-prod"
version = "0.1.0"
description = "Sistema de Gestión de Pedidos AZ"
authors = ["Cesar Linares <cesarlinares1522@gmail.com>"]  # ¡Formato correcto!

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]  # Corregido a poetry-core
build-backend = "poetry.core.masonry.api"